HomeworkOOP: "небольшой" фикс + подлива

--- a/HomeworkOOP/HomeworkOOP.csproj
+++ b/HomeworkOOP/HomeworkOOP.csproj
@@ -36,11 +36,13 @@
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -63,6 +65,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -75,8 +78,14 @@
     <Compile Include="inc\IStorage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\FileStorageOfKittens.cs" />
-    <Compile Include="src\MemoryStorageOfKittens.cs" />
+    <Compile Include="src\app\Application.cs" />
+    <Compile Include="src\commands\CommandAddTask.cs" />
+    <Compile Include="src\commands\CommandCompleteTask.cs" />
+    <Compile Include="src\commands\CommandEditTask .cs" />
+    <Compile Include="src\commands\CommandListTasks.cs" />
+    <Compile Include="src\commands\CommandRemoveTask.cs" />
+    <Compile Include="src\filestorage\FileStorageOfKittens.cs" />
+    <Compile Include="src\memorystorage\MemoryStorageOfKittens.cs" />
     <Compile Include="src\TaskMod.cs" />
     <Compile Include="src\TaskModManager.cs" />
   </ItemGroup>
